--- a/scripts/leftovers/acceptance/task.yml
+++ b/scripts/leftovers/acceptance/task.yml
@@ -16,3 +16,10 @@ run:
 params:
   LEFTOVERS_ACCEPTANCE:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
+  BBL_AWS_ACCESS_KEY_ID:
+  BBL_AWS_SECRET_ACCESS_KEY:
+  BBL_AWS_REGION:
+  BBL_AZURE_SUBSCRIPTION_ID:
+  BBL_AZURE_TENANT_ID:
+  BBL_AZURE_CLIENT_ID:
+  BBL_AZURE_CLIENT_SECRET:
