fix task formatting
Signed-off-by: Connor Braa <connor.braa@gmail.com>

--- a/scripts/bbl-state-resource/task.yml
+++ b/scripts/bbl-state-resource/task.yml
@@ -2,7 +2,8 @@
 platform: linux
 image_resource:
   type: docker-image
-  source: cfinfrastructure/golang
+  source:
+    repository: cfinfrastructure/golang
 
 inputs:
 - name: a-bbl-state
