tag ci while in progress
Signed-off-by: Connor Braa <connor.braa@gmail.com>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -180,6 +180,7 @@ resources:
 - name: bbl-state-resource-docker
   type: docker-image
   source:
+    tag: ci
     repository: cfinfrastructure/bbl-state-resource
     username: {{docker-username}}
     password: {{docker-password}}
@@ -235,6 +236,8 @@ jobs:
   public: false
   plan:
   - aggregate:
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    - get: bbl-state-resource-docker
     - get: bbl-state-resource-src
       trigger: true
       passed:
@@ -247,7 +250,7 @@ jobs:
         globs:
         - bbl-*_linux_x86-64
   - task: format-version-as-json
-    image: busybox
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     config:
       platform: linux
       inputs:
@@ -258,11 +261,13 @@ jobs:
         path: bash
         args:
           - "-c"
-          - printf '{"bbl_version": "%s"}' $(cat bbl-release/number) > docker-build-args/json
+          - >-
+            printf '{"bbl_version": "%s"}' $(cat bbl-release/version) > docker-build-args/json
   - put: bbl-state-resource-docker
     params:
       build: bbl-state-resource-src
       build_args_file: docker-build-args/json
+      tag: bbl-state-resource-docker/tag
 
 - name: bbl-state-resource-acceptance
   public: false
@@ -270,11 +275,12 @@ jobs:
   plan:
   - get: bbl-release
     resource: bbl-release-official
+    passed: [build-bbl-state-docker]
+    trigger: true
     params:
       version: { tag: bbl-release/number }
       globs:
       - bbl-*_linux_x86-64
-    trigger: true
   - get: bbl-state-resource-docker
     passed: [build-bbl-state-docker]
   - get: bbl-state-resource-src
