--- a/pipelines/leftovers.yml
+++ b/pipelines/leftovers.yml
@@ -96,6 +96,32 @@ jobs:
       BBL_AZURE_CLIENT_ID: {{azure_client_id}}
       BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
 
+- name: acceptance-vsphere
+  serial: true
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: leftovers
+      trigger: true
+      passed: [test]
+  - task: acceptance
+    file: ci/scripts/leftovers/acceptance/task.yml
+    params:
+      LEFTOVERS_ACCEPTANCE: vsphere
+      BBL_VSPHERE_NETWORK: {{vsphere_network_name}}
+      BBL_VSPHERE_SUBNET: {{vsphere_subnet}}
+      BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
+      BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
+      BBL_VSPHERE_VCENTER_PASSWORD: {{vsphere_vcenter_password}}
+      BBL_VSPHERE_VCENTER_DC: {{vsphere_vcenter_dc}}
+      BBL_VSPHERE_VCENTER_CLUSTER: {{vsphere_vcenter_cluster}}
+      BBL_VSPHERE_VCENTER_RP: {{vsphere_vcenter_rp}}
+      BBL_VSPHERE_VCENTER_DS: {{vsphere_vcenter_ds}}
+      BBL_VSPHERE_VCENTER_DISKS: {{vsphere_vcenter_disks}}
+      BBL_VSPHERE_VCENTER_VMS: {{vsphere_vcenter_vms}}
+      BBL_VSPHERE_VCENTER_TEMPLATES: {{vsphere_vcenter_templates}}
+
 - name: build-release
   plan:
   - aggregate:
