Add vsphere creds to acceptance task yml

--- a/scripts/leftovers/acceptance/task.yml
+++ b/scripts/leftovers/acceptance/task.yml
@@ -23,3 +23,7 @@ params:
   BBL_AZURE_TENANT_ID:
   BBL_AZURE_CLIENT_ID:
   BBL_AZURE_CLIENT_SECRET:
+  BBL_VSPHERE_VCENTER_IP:
+  BBL_VSPHERE_VCENTER_USER:
+  BBL_VSPHERE_VCENTER_PASSWORD:
+  BBL_VSPHERE_VCENTER_DC:
