--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -324,7 +324,8 @@ jobs:
         state_dir: bbl-state
         command: "down"
   - put: bbl-state-pool
-    add: bbl-state
+    params:
+      add: bbl-state
 
 - name: bbl-pool-down
   public: false
