--- a/scripts/bosh-bootloader/build-bbl-docs/task.yml
+++ b/scripts/bosh-bootloader/build-bbl-docs/task.yml
@@ -3,7 +3,8 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: cfinfrastructure/mkdocs
+  source:
+    repository: cfinfrastructure/mkdocs
 
 inputs:
   - name: bosh-bootloader
