use github-release resource type for building docs

--- a/scripts/bosh-bootloader/build-bbl-docs/task.yml
+++ b/scripts/bosh-bootloader/build-bbl-docs/task.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: cfinfrastructure/mkdocs
 
 inputs:
-  - name: bosh-bootloader
+  - name: bbl-release-official
   - name: ci
 
 outputs:
